Prevent touch device pressure from overshoot

As we might override touch device calibrated max pressure. The device
might be able to report value larger than maximum of ABS_PRESSURE. This
patch prevent the normalized pressure from overshoot.

BUG=717193

Review-Url: https://codereview.chromium.org/2939793002
Cr-Commit-Position: refs/heads/master@{#480640}

Former-commit-id: d050563e14bb3d4ccf75ff417341c205eb5b7a57